# encrypted-nft-poc

./: .gitignore  README.md  account.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: .env.example  Move.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/publish/: publish.sh
app/sources/: offer.move  private_collectible.move  witness_rule.move
app/src/: App.tsx  CreateMarketplace.tsx  constants.ts  main.tsx  networkConfig.ts  web3hooks.ts
app/src/components/: AcceptOfferModal.tsx  FileUpload.tsx  ListBot.tsx  ListTop.tsx  Marketplace.tsx  NFTCard.tsx  NFTTooltip.tsx  SellBot.tsx  SellTop.tsx  TopBarSearch.tsx  TopButton.tsx  Topbar.tsx  UploadFile.tsx  WelcomePage.tsx  stepTracker.tsx
app/src/pages/: ListPage.tsx  Marketplace.tsx  NFTPage.tsx  PersonalSpace.tsx  SellPage.tsx  WelcomePage.tsx
app/src/styles/: constants.ts  global.css  (+3 more)
backend/: .env.example  db.js  db.ts  package.json  pnpm-lock.yaml  server.js  server.ts  tsconfig.json
backend/crypto/: obfuscate.ts
backend/images/: bucket.ts  obfuscate.ts  proof.ts
backend/prisma/: dev.db  dev.db-journal  schema.prisma
cli/: Cargo.toml  README.md
cli/src/: enft_commands.rs  key_derive.rs  lib.rs  utils.rs
counter/sources/: private_nft_market.move
counter/tests/: private_nft_market_test.move
marketplace/: Move.toml
marketplace/sources/: private_nft_market.move
marketplace/tests/: accept_offer_test.move
move/counter/: Move.toml
package/: Move.toml  publish.sh
package/sources/: private_nft.move
src/: CreateMarketplace.tsx  Marketplace.tsx  account.ts  constants.ts  index.ts
test/: account.test.ts
(+9 files in other folders)
